<resources>
    <string name="app_name">Laboratorio1TLM</string>
    <string name="ingrese_codifgo">ingrese codifgo</string>
    <string name="ingrese_descripcion">ingrese descripcion</string>
    <string name="ingrese_precio">ingrese precio</string>
    <string name="ingresar">INGRESAR</string>
    <string name="consultar_por_codigo">CONSULTAR POR CODIGO</string>
    <string name="consultar_por_descripcion">CONSULTAR POR DESCRIPCION</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="modificar">MODIFICAR</string>
    <string name="peliculas">PELICULAS</string>
    <string name="url_portada">URL portada</string>
    <string name="consultar_pelicula">Consultar pelicula</string>
    <string name="titulo">titulo</string>
    <string name="registar_pelicula">Registar Pelicula</string>
    <string name="descripcion">Descripcion</string>
    <string name="year">year</string>
    <string name="codigo">codigo</string>
    <string name="consulta_de_peliculas">Consulta de peliculas</string>
    <string name="regresar">regresar</string>
    <string name="titulo1">Titulo</string>
    <string name="textview">TextView</string>
</resources>